--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
 		<h1><i class="fa fa-twitter" aria-hidden="true"></i> Plotter</h1>
 		<form action="/" method="POST" target="_self">
 			<div class="input-group">
-				<input type="text" class="form-control input-lg" name="print" placeholder="text" value="Dies ist ein Test">
+				<input type="text" class="form-control input-lg" name="print" placeholder="text">
 				<span class="input-group-btn">
 					<button class="btn btn-default btn-lg" type="submit">Print</button>
 				</span>
