--- a/web/index.html
+++ b/web/index.html
@@ -47,7 +47,8 @@
 	</div>
 	<footer>
 		<div class="container">
-			<a href="https://github.com/dsstio/plotter">Code is on GitHub <i class="fa fa-github" aria-hidden="true"></i></a>
+			<a href="https://github.com/dsstio/plotter">Code is on GitHub <i class="fa fa-github" aria-hidden="true"></i></a><br />
+			<a href="#" onclick="$('body').get(0).webkitRequestFullscreen()">switch to fullscreen</a>
 		</div>
 	</footer>
 </body>
